# imageops

./: default.nix  pyproject.toml  requirements.txt  todo.md
src/imageops/: core.py  io.py
src/imageops/util/: crop.py
